--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.0.0",
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
