--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.0.0",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
